--- a/scalffoldeth2/packages/nextjs/styles/globals.css
+++ b/scalffoldeth2/packages/nextjs/styles/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
@@ -90,6 +91,7 @@
 
   body {
     min-height: 100vh;
+    font-family: 'Roboto', sans-serif;
   }
 
   h1,
